# aureus-backend

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_migrations.py
src/aureus_backend/: main.py
src/aureus_backend/api/v1/auth/: credentials.py
src/aureus_backend/api/v1/banking/: __init__.py  accounts.py  banks.py  connect.py
src/aureus_backend/api/v1/ingestion/: banking.py
src/aureus_backend/clients/: __init__.py  enable_banking.py
src/aureus_backend/core/: config.py
src/aureus_backend/migrations/: 001_create_api_credentials.sql  002_enable_rls.sql
src/aureus_backend/models/: __init__.py  api_credentials.py  base.py
src/aureus_backend/models/auth/: __init__.py  enablebanking.py  google.py
src/aureus_backend/repositories/: api_credentials.py
src/aureus_backend/services/: banking_service.py
src/aureus_backend/services/ingestion/: enable_banking.py
src/aureus_backend/utils/: __init__.py  crypto.py  dependencies.py  utils.py
